优化插件加载逻辑

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 isPage: true
 title: 首页
 css: [blog.css]
-js: [blog.js,plugin.js]
+js: [blog.js]
 ---
 <div class="container page-index animation-fade-up">
 	{% for post in site.posts  %}
