--- a/pages/categories.html
+++ b/pages/categories.html
@@ -3,7 +3,7 @@ layout: page
 isPage: true
 title: 文章分类
 css: [blog.css]
-js: [blog.js,plugin.js]
+js: [blog.js]
 ---
 <div class="container page-categories animation-fade-up">
 	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
