--- a/pages/chat.html
+++ b/pages/chat.html
@@ -3,7 +3,7 @@ layout: page
 isPage: true
 title: 留言板
 css: [blog.css]
-js: [blog.js, md5.js, Bmob-1.6.6.min.js, chat.js,plugin.js]
+js: [blog.js, md5.js, Bmob-1.6.6.min.js, chat.js]
 ---
 
 <div class="container page-chat animation-fade-up">
@@ -17,7 +17,7 @@ js: [blog.js, md5.js, Bmob-1.6.6.min.js, chat.js,plugin.js]
   </form>
   <ul class="page-chat-list"></ul>
   <div class="page-chat-load-container">
-    <span class="page-chat-load select-none">暂无更多评论</span>
+    <span class="page-chat-load select-none">评论加载中</span>
   </div>
   <li class="page-chat-list-templet" hidden>
     <div class="info">
