--- a/pages/search.html
+++ b/pages/search.html
@@ -3,7 +3,7 @@ layout: page
 isPage: true
 title: 搜索
 css: [blog.css]
-js: [blog.js,search.js,plugin.js]
+js: [blog.js,search.js]
 ---
 <div class="container page-search animation-fade-up">
 	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
