--- a/pages/categories.html
+++ b/pages/categories.html
@@ -1,21 +1,21 @@
 ---
 layout: page
-isPage: true
 title: 文章分类
-css: [blog.css]
+css: [common.css,page.css]
 js: [blog.js]
 ---
-<div class="container page-categories animation-fade-up">
-	<h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
-	<ul>
-		{% for category in site.categories %}
-		<li>
+
+<div class="page page-categories animation-fade-up">
+	<div class="list-category">
+		<h2>所有分类</h2>
+		<div>
+			{% for category in site.categories %}
 			<a href="javascript:document.getElementById('{{ category[0] }}').scrollIntoView()">{{ category[0] }}</a>
-		</li>
-		{% endfor %}
-	</ul>
+			{% endfor %}
+		</div>
+	</div>
 	{% for category in site.categories %}
-	<div class="list-group">
+	<div class="list-post">
 		<h2 id="{{ category[0] }}">{{ category[0] }}</h2>
 		<ul>
 			{% for post in category[1] %}
