--- a/pages/categories.html
+++ b/pages/categories.html
@@ -21,7 +21,7 @@ js: [blog.js]
 			{% for post in category[1] %}
 			<li>
 				<span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
-				<a href="{{ site.baseUrl | append: post.url }}" class="title hover-underline">{{ post.title }}</a>
+				<a href="{{ site.baseurl | append: post.url }}" class="title hover-underline">{{ post.title }}</a>
 			</li>
 			{% endfor %}
 		</ul>
