--- a/pages/categories.html
+++ b/pages/categories.html
@@ -1,30 +1,28 @@
 ---
 layout: page
 title: 文章分类
-css: [common.css,page.css]
-js: [blog.js]
 ---
 
 <div class="page page-categories animation-fade-up">
-	<div class="list-category">
-		<h2>所有分类</h2>
-		<div>
-			{% for category in site.categories %}
-			<a href="javascript:document.getElementById('{{ category[0] }}').scrollIntoView()">{{ category[0] }}</a>
-			{% endfor %}
-		</div>
-	</div>
-	{% for category in site.categories %}
-	<div class="list-post">
-		<h2 id="{{ category[0] }}">{{ category[0] }}</h2>
-		<ul>
-			{% for post in category[1] %}
-			<li>
-				<span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
-				<a href="{{ site.baseurl | append: post.url }}" class="title hover-underline">{{ post.title }}</a>
-			</li>
-			{% endfor %}
-		</ul>
-	</div>
-	{% endfor %}
+  <div class="list-category">
+    <h2>所有分类</h2>
+    <div>
+      {%- for category in site.categories %}
+      <a href="javascript:document.getElementById('{{ category[0] }}').scrollIntoView()">{{ category[0] }}</a>
+      {%- endfor %}
+    </div>
+  </div>
+  {%- for category in site.categories %}
+  <div class="list-post">
+    <h2 id="{{ category[0] }}">{{ category[0] }}</h2>
+    <ul>
+      {%- for post in category[1] %}
+      <li>
+        <span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
+        <a href="{{ site.baseurl | append: post.url }}" class="title hover-underline">{{ post.title }}</a>
+      </li>
+      {%- endfor %}
+    </ul>
+  </div>
+  {%- endfor %}
 </div>
