--- a/pages/categories.html
+++ b/pages/categories.html
@@ -3,7 +3,7 @@ layout: page
 title: 文章分类
 ---
 
-<div class="page page-categories animation-fade-up">
+<div class="page page-categories">
   <div class="list-category">
     <h2>所有分类</h2>
     <div>
