--- a/pages/search.html
+++ b/pages/search.html
@@ -4,7 +4,7 @@ title: 搜索
 searchPage: true
 ---
 
-<div class="page page-search animation-fade-up">
+<div class="page page-search">
   <input id="search-input" type="text" placeholder="请在这里输入关键词^_^"></input>
   <h1>
     <span>搜索结果</span>
